--- a/News365.UI/Areas/Cms/Views/Categories/Index.cshtml
+++ b/News365.UI/Areas/Cms/Views/Categories/Index.cshtml
@@ -1,53 +1,55 @@
 @model IEnumerable<Category>
 @{
-    ViewData["Title"] ="Index";
+    ViewData["Title"] = "Index";
 }
 
 
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-           <h2 class="text-primary">Category List</h2>     
+            <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-              <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Categories" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
-              </a>
+            </a>
         </div>
     </div>
     <br /><br />
 
-<table class="table table-bordered table-stiped" style="width: ;100%">
-    <thead>
-        <tr>
-            <th>
-                Category Name 
-            </th>
+    <table class="table table-bordered table-stiped" style="width: ;100%">
+        <thead>
+            <tr>
+                <th>
+                    Id
+                </th>
+                <th>
+                    Category Name
+                </th>
+                <th></th>
 
-            <th></th>
-            
-        </tr>
-    </thead>
-    <tbody>
-      @foreach (var obj  in Model)
-      {
-        <tr>
-            <td width="50%">
-                 @obj.Id
-            </td>
-            <td width="30%">
-                @obj.Name
-            </td>
-            <td>
-                <div class="w-75 btn-group" role="group">
-                    <a asp-controller="Category.Name" asp-action="Edit" asp-route-id="@obj.Id"
-                    class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
-                    <a asp-controller="Category.Name" asp-action="Delete" asp-route-id="@obj.Id"
-                    class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
-                </div>
-            </td>
-        </tr>
-      }
-    </tbody>
-</table>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var obj in Model)
+            {
+                <tr>
+                    <td width="50%">
+                        @obj.Id
+                    </td>
+                    <td width="30%">
+                        @obj.Name
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Categories" asp-action="Edit" asp-route-id="@obj.Id"
+                            class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
+                            <a asp-controller="Categories" asp-action="Delete" asp-route-id="@obj.Id"
+                            class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
