--- a/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
+++ b/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,29 +12,38 @@
     <link href="~/assets-cms/css/styles.css" rel="stylesheet" />
     <link href="~/assets-cms/lib/toastr/build/toastr.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="~/assets-cms/img/favicon.png" />
-    <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" crossorigin="anonymous"></script>
+    <script data-search-pseudo-elements defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"
+        crossorigin="anonymous"></script>
 </head>
+
 <body class="nav-fixed">
     <div class="loa">
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
-    <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
-        <button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 me-2 ms-lg-2 me-lg-0" id="sidebarToggle"><i data-feather="menu"></i></button>
-        <a class="navbar-brand pe-3 ps-4 ps-lg-2" asp-area="Cms" asp-controller="Home" asp-action="Index">News365 Admin</a>
+    <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white"
+        id="sidenavAccordion">
+        <button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 me-2 ms-lg-2 me-lg-0" id="sidebarToggle"><i
+                data-feather="menu"></i></button>
+        <a class="navbar-brand pe-3 ps-4 ps-lg-2" asp-area="Cms" asp-controller="Home" asp-action="Index">News365
+            Admin</a>
         <ul class="navbar-nav align-items-center ms-auto">
             <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
-                <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage"
+                    href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
                     <img class="img-fluid" src="~/assets-cms/img/illustrations/profiles/profile-2.png" />
                 </a>
-                <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
+                <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up"
+                    aria-labelledby="navbarDropdownUserImage">
                     <div class="dropdown-header d-flex align-items-center">
                         <img class="dropdown-user-img" src="~/assets-cms/img/illustrations/profiles/profile-2.png" />
                         <div class="dropdown-user-details">
                             @* <div class="dropdown-user-details-name">@User.Identity.Name</div>
-                            <div class="dropdown-user-details-email">@User.FindFirst(ClaimTypes.Email).Value</div> *@
+                                <div class="dropdown-user-details-email">@User.FindFirst(ClaimTypes.Email).Value</div> *@
                         </div>
                     </div>
                     <div class="dropdown-divider"></div>
@@ -56,43 +66,52 @@
                             Ana Sayfa
                         </a>
                         <div class="sidenav-menu-heading">Cms Sayfaları</div>
-                        <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                        <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse"
+                            data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
                             Sayfalar
                             <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="collapsePages" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
-                                @* <a class="nav-link" asp-area="Cms" asp-controller="Languages" asp-action="Index">Çeviri Dilleri</a> *@
-                                <a class="nav-link" asp-area="Cms" asp-controller="Categories" asp-action="Index">Kategori</a>
-                                @* <a class="nav-link" asp-area="Cms" asp-controller="Sliders" asp-action="Index">Slider</a>
-                                <a class="nav-link" asp-area="Cms" asp-controller="Pages" asp-action="Index">Sayfalar</a>
-                                <a class="nav-link" asp-area="Cms" asp-controller="Products" asp-action="Index">Ürünler</a>
-                                <a class="nav-link" asp-area="Cms" asp-controller="Receipts" asp-action="Index">İpuçları</a>
-                                <a class="nav-link" asp-area="Cms" asp-controller="Advertisings" asp-action="Index">Reklamlar</a> *@
+                                @* <a class="nav-link" asp-area="Cms" asp-controller="Languages"
+                                    asp-action="Index">Çeviri Dilleri</a> *@
+                                <a class="nav-link" asp-area="Cms" asp-controller="Categories"
+                                    asp-action="Index">Kategori</a>
+                                <a class="nav-link" asp-area="Cms" asp-controller="News"
+                                    asp-action="Index">Haberler</a>
+                                @* <a class="nav-link" asp-area="Cms" asp-controller="Sliders"
+                                    asp-action="Index">Slider</a>
+                                    <a class="nav-link" asp-area="Cms" asp-controller="Pages"
+                                    asp-action="Index">Sayfalar</a>
+
+                                    <a class="nav-link" asp-area="Cms" asp-controller="Receipts"
+                                    asp-action="Index">İpuçları</a>
+                                    <a class="nav-link" asp-area="Cms" asp-controller="Advertisings"
+                                    asp-action="Index">Reklamlar</a> *@
                             </nav>
                         </div>
                         @* <div class="sidenav-menu-heading">Ayarlar</div>
-                        <a class="nav-link" asp-area="Cms" asp-controller="Letter" asp-action="Index">
+                            <a class="nav-link" asp-area="Cms" asp-controller="Letter" asp-action="Index">
                             <div class="nav-link-icon"><i data-feather="mail"></i></div>
                             Gelen Mesajlar
-                        </a>
-                        <a class="nav-link" asp-area="Cms" asp-controller="AppSeos" asp-action="Index">
+                            </a>
+                            <a class="nav-link" asp-area="Cms" asp-controller="AppSeos" asp-action="Index">
                             <div class="nav-link-icon"><i data-feather="tool"></i></div>
                             Sayfa Seo Ayarları
-                        </a> 
-                        <a class="nav-link" asp-area="Cms" asp-controller="AppConfigs" asp-action="Index">
+                            </a>
+                            <a class="nav-link" asp-area="Cms" asp-controller="AppConfigs" asp-action="Index">
                             <div class="nav-link-icon"><i data-feather="settings"></i></div>
                             Genel Ayarlar
-                        </a> 
-                    </div> *@
-                </div>
-                <div class="sidenav-footer">
-                    <div class="sidenav-footer-content">
-                        <div class="sidenav-footer-subtitle">Giriş yaptı:</div>
-                        <div class="sidenav-footer-title">@User.Identity.Name</div>
+                            </a>
+                            </div> *@
                     </div>
-                </div>
+                    <div class="sidenav-footer">
+                        <div class="sidenav-footer-content">
+                            <div class="sidenav-footer-subtitle">Giriş yaptı:</div>
+                            <div class="sidenav-footer-title">@User.Identity.Name</div>
+                        </div>
+                    </div>
             </nav>
         </div>
         <div id="layoutSidenav_content">
@@ -102,11 +121,15 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
     <script src="~/assets-cms/lib/toastr/build/toastr.min.js"></script>
-    @{ await Html.RenderPartialAsync("_MessagesModal"); }
+    @{
+        await Html.RenderPartialAsync("_MessagesModal"); 
+    }
     <script src="~/assets-cms/js/scripts.js"></script>
     @RenderSection("Validation", required: false)
     @RenderSection("Scripts", required: false)
 </body>
+
 </html>
