--- a/News365.UI/Areas/Cms/Views/News/Create.cshtml
+++ b/News365.UI/Areas/Cms/Views/News/Create.cshtml
@@ -2,41 +2,82 @@
 @{
     ViewData["Title"] = "Create";
 }
-<form method="post">
-    <div class="border pt-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Create News</h2>
+
+<header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
+    <div class="container-xl px-4">
+        <div class="page-header-content pt-4">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-auto mt-4">
+                    <h1 class="page-header-title">
+                        <span class="page-header-icon"><i data-feather="edit-3"></i></span>
+                        Create News
+                    </h1>
+                </div>
+            </div>
         </div>
-        <div asp-validation-summary="All"></div>
-        <div class="mb-3">
-            <label asp-for="NewsModel.Title"></label>
-            <input asp-for="NewsModel.Title" class="form-control" />
-            <span asp-validation-for="NewsModel.Title" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="NewsModel.Body"></label>
-            <input asp-for="NewsModel.Body" class="form-control" />
-            <span asp-validation-for="NewsModel.Body" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="NewsModel.CategoryId"></label>
-            <input asp-for="NewsModel.CategoryId" class="form-control" />
-            <span asp-validation-for="NewsModel.CategoryId" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="NewsModel.FileCode"></label>
-            <input asp-for="NewsModel.FileCode" class="form-control" />
-            <span asp-validation-for="NewsModel.FileCode" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary" style="widht:150px">Create</button>
-        <a asp-controller="News" asp-action="Index" class="btn btn-secondary" style="150px">
-            Back to List
-        </a>
     </div>
-</form>
+</header>
+<div class="container-xl px-4 mt-n10">
+    <form id="fromloading" enctype="multipart/form-data" asp-action="Create" asp-antiforgery="true">
+        <div class="row">
+            <div class="col-xl-8">
+                <div class="card card-header-actions mb-4">
+
+                    <div class="card-body">
+                        <div class="tab-content" id="pills-tabContent">
+
+                            <div class="tab-pane fade" id="pills-lang" role="tabpanel" aria-labelledby="pills-lang-tab">
+                                <div class="form-group mb-3">
+                                    <label class="form-label" asp-for="NewsModel.Title">Başlık </label>
+                                    <input type="text" class="form-control" asp-for="NewsModel.Title">
+                                    <span class="text-danger" asp-validation-for="NewsModel.Title"></span>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label class="form-label" asp-for="NewsModel.Body">Açıklama</label>
+                                    <textarea class="form-control" asp-for="NewsModel.Body" rows="5"
+                                        cols="5"></textarea>
+                                    <span class="text-danger" asp-validation-for="NewsModel.Body"></span>
+                                </div>
+                            </div>
+                            langCountPanel++;
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                <div class="card mb-4">
+                    <div class="card-header">Sabit Alanlar</div>
+                    <div class="card-body">
+                        <div class="form-group mb-3">
+                            <label class="form-label" asp-for="NewsModel.CategoryId">Kategori</label>
+                            <select class="form-select" asp-for="NewsModel.CategoryId">
+                                <option value="" selected>Seçiniz</option>
+                                 @foreach (var item in Model.Categories)
+                                {
+                                } 
+                            </select>
+                            <span class="text-danger" asp-validation-for="NewsModel.CategoryId"></span>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="file" class="form-label">Ürün Görsel</label>
+                            <input class="form-control" type="file" name="file" id="file">
+                        </div>
+                        <div class="bn">
+                            <button type="submit" class="btn  btn-primary">Kaydet</button>
+                            <a asp-action="Index" class="btn  btn-dark">Vazgeç</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
 @section Scripts
 {
-@{
-    <partial name="_ValidationScriptsPartial" />
+    @{
+      <partial name="_ValidationScriptsPartial"/>
+     }
 }
-}
+
+
