Admin login panel Added

--- a/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
+++ b/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
                     <div class="dropdown-header d-flex align-items-center">
                         <img class="dropdown-user-img" src="~/assets-cms/img/illustrations/profiles/profile-2.png" />
                         <div class="dropdown-user-details">
-                            @* <div class="dropdown-user-details-name">@User.Identity.Name</div>
-                                <div class="dropdown-user-details-email">@User.FindFirst(ClaimTypes.Email).Value</div> *@
+                            <div class="dropdown-user-details-name">@User.Identity.Name</div>
+                                <div class="dropdown-user-details-email">@User.FindFirst(ClaimTypes.Email).Value</div> 
                         </div>
                     </div>
                     <div class="dropdown-divider"></div>
