--- a/News365.UI/Areas/Cms/Views/Categories/Index.cshtml
+++ b/News365.UI/Areas/Cms/Views/Categories/Index.cshtml
@@ -1,55 +1,62 @@
 @model IEnumerable<Category>
+
 @{
     ViewData["Title"] = "Index";
 }
+@section Styles{
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+}
 
-
-<div class="container p-3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Categories" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
-            </a>
+<header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
+    <div class="container-xl px-4">
+        <div class="page-header-content pt-4">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-auto mt-4">
+                    <h1 class="page-header-title">
+                        <span class="page-header-icon"><i data-feather="filter"></i></span>
+                        Categories
+                    </h1>
+                </div>
+            </div>
         </div>
     </div>
-    <br /><br />
-
-    <table class="table table-bordered table-stiped" style="width: ;100%">
-        <thead>
-            <tr>
-                <th>
-                    Id
-                </th>
-                <th>
-                    Category Name
-                </th>
-                <th></th>
-
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var obj in Model)
-            {
-                <tr>
-                    <td width="50%">
-                        @obj.Id
-                    </td>
-                    <td width="30%">
-                        @obj.Name
-                    </td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Categories" asp-action="Edit" asp-route-id="@obj.Id"
-                            class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
-                            <a asp-controller="Categories" asp-action="Delete" asp-route-id="@obj.Id"
-                            class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
-                        </div>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+</header>
+<div class="container-xl px-4 mt-n10">
+    <div class="card card-header-actions mb-4">
+        <div class="card-header">
+            News Category
+            <div class="rid">
+                <button data-controler="Categories" data-action="Order" class="btn btn-sm btn-secondary orderBtn">Short by</button>
+                <a asp-action="Create" class="btn btn-sm btn-primary">Create Category</a>
+            </div>
+        </div>
+        <div class="card-body">
+            <table id="datatablesSimple" class="table-shorting">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>#</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr data-id="@item.Id">
+                            <td>@item.Name</td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-datatable btn-icon btn-transparent-dark me-2"><i data-feather="more-vertical"></i></a>
+                                <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete it?')" class="btn btn-datatable btn-icon btn-transparent-dark"><i data-feather="trash-2"></i></a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
+@section Scripts{
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+    <script src="~/assets-cms/js/datatables/datatables-simple-demo.js"></script>
+}
