--- a/News365.UI/Areas/Cms/Views/News/Create.cshtml
+++ b/News365.UI/Areas/Cms/Views/News/Create.cshtml
@@ -25,21 +25,16 @@
 
                     <div class="card-body">
                         <div class="tab-content" id="pills-tabContent">
-
-                            <div class="tab-pane fade" id="pills-lang" role="tabpanel" aria-labelledby="pills-lang-tab">
-                                <div class="form-group mb-3">
-                                    <label class="form-label" asp-for="NewsModel.Title">Başlık </label>
-                                    <input type="text" class="form-control" asp-for="NewsModel.Title">
-                                    <span class="text-danger" asp-validation-for="NewsModel.Title"></span>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <label class="form-label" asp-for="NewsModel.Body">Açıklama</label>
-                                    <textarea class="form-control" asp-for="NewsModel.Body" rows="5"
-                                        cols="5"></textarea>
-                                    <span class="text-danger" asp-validation-for="NewsModel.Body"></span>
-                                </div>
+                            <div class="form-group mb-3">
+                                <label class="form-label" asp-for="NewsModel.Title">Title </label>
+                                <input type="text" class="form-control" asp-for="NewsModel.Title">
+                                <span class="text-danger" asp-validation-for="NewsModel.Title"></span>
                             </div>
-                            langCountPanel++;
+                            <div class="form-group mb-3">
+                                <label class="form-label" asp-for="NewsModel.Body">Body</label>
+                                <textarea class="form-control" asp-for="NewsModel.Body" rows="5" cols="5"></textarea>
+                                <span class="text-danger" asp-validation-for="NewsModel.Body"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -52,14 +47,16 @@
                             <label class="form-label" asp-for="NewsModel.CategoryId">Kategori</label>
                             <select class="form-select" asp-for="NewsModel.CategoryId">
                                 <option value="" selected>Seçiniz</option>
-                                 @foreach (var item in Model.Categories)
+                                @foreach (var item in Model.Categories)
                                 {
-                                } 
+                                    <option value="@item.Id">@item.Name</option>
+                                    
+                                }
                             </select>
                             <span class="text-danger" asp-validation-for="NewsModel.CategoryId"></span>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="file" class="form-label">Ürün Görsel</label>
+                            <label for="file" class="form-label">Haber Görsel</label>
                             <input class="form-control" type="file" name="file" id="file">
                         </div>
                         <div class="bn">
@@ -75,9 +72,7 @@
 
 @section Scripts
 {
-    @{
-      <partial name="_ValidationScriptsPartial"/>
-     }
+@{
+    <partial name="_ValidationScriptsPartial" />
 }
-
-
+}
