--- a/News365.UI/Areas/Cms/Views/News/Index.cshtml
+++ b/News365.UI/Areas/Cms/Views/News/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-auto mt-4">
                     <h1 class="page-header-title">
                         <span class="page-header-icon"><i data-feather="filter"></i></span>
-                        Ürünler
+                        NEWS
                     </h1>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                             <td>@item.Title</td>
                             <td>@item.Body</td>
                             <td>@item.CategoryId</td>
-                            <td>@item.FileCode</td>
+                            <td><a href="./assets/file/news/@item.FileCode">indir</a></td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-datatable btn-icon btn-transparent-dark me-2"><i data-feather="more-vertical"></i></a>
                                 <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete it?')" class="btn btn-datatable btn-icon btn-transparent-dark"><i data-feather="trash-2"></i></a>
