Slider Crud Added

--- a/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
+++ b/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
@@ -80,9 +80,9 @@
                                     asp-action="Index">Kategori</a>
                                 <a class="nav-link" asp-area="Cms" asp-controller="News"
                                     asp-action="Index">Haberler</a>
-                                @* <a class="nav-link" asp-area="Cms" asp-controller="Sliders"
+                                 <a class="nav-link" asp-area="Cms" asp-controller="Sliders"
                                     asp-action="Index">Slider</a>
-                                    <a class="nav-link" asp-area="Cms" asp-controller="Pages"
+                                    @*<a class="nav-link" asp-area="Cms" asp-controller="Pages"
                                     asp-action="Index">Sayfalar</a>
 
                                     <a class="nav-link" asp-area="Cms" asp-controller="Receipts"
