--- a/News365.UI/Areas/Cms/Views/Account/Login.cshtml
+++ b/News365.UI/Areas/Cms/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
                         <div class="col-lg-5">
                             <!-- Basic login form-->
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header justify-content-center"><h3 class="fw-light my-4">Giriş</h3></div>
+                                <div class="card-header justify-content-center"><h3 class="fw-light my-4">Login</h3></div>
                                 <div class="card-body">
                                     <!-- Login form-->
                                     <form asp-action="Login" asp-antiforgery="true" asp-route-returnUrl="@ViewBag.ReturnUrl">
@@ -37,12 +37,12 @@
                                         </div>
                                         <!-- Form Group (password)-->
                                         <div class="mb-3">
-                                            <label class="small mb-1" asp-for="Password">Şifre</label>
+                                            <label class="small mb-1" asp-for="Password">Password</label>
                                             <input class="form-control" asp-for="Password" type="password" placeholder="Enter password" />
                                         </div>
                                         <!-- Form Group (login box)-->
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <button type="submit" class="btn btn-primary">Giriş yap</button>
+                                            <button type="submit" class="btn btn-primary">Login</button>
                                         </div>
                                     </form>
                                 </div>
