--- a/News365.UI/Areas/Cms/Views/Sliders/Create.cshtml
+++ b/News365.UI/Areas/Cms/Views/Sliders/Create.cshtml
@@ -1,4 +1,4 @@
-@model NewsVM
+﻿@model SliderVM
 @{
     ViewData["Title"] = "Create";
 }
@@ -10,7 +10,7 @@
                 <div class="col-auto mt-4">
                     <h1 class="page-header-title">
                         <span class="page-header-icon"><i data-feather="edit-3"></i></span>
-                        Create News
+                        Create Slider
                     </h1>
                 </div>
             </div>
@@ -26,14 +26,14 @@
                     <div class="card-body">
                         <div class="tab-content" id="pills-tabContent">
                             <div class="form-group mb-3">
-                                <label class="form-label" asp-for="NewsModel.Title">Title </label>
-                                <input type="text" class="form-control" asp-for="NewsModel.Title">
-                                <span class="text-danger" asp-validation-for="NewsModel.Title"></span>
+                                <label class="form-label" asp-for="Slider.Title">Title </label>
+                                <input type="text" class="form-control" asp-for="Slider.Title">
+                                <span class="text-danger" asp-validation-for="Slider.Title"></span>
                             </div>
                             <div class="form-group mb-3">
-                                <label class="form-label" asp-for="NewsModel.Body">Body</label>
-                                <textarea class="form-control" asp-for="NewsModel.Body" rows="5" cols="5"></textarea>
-                                <span class="text-danger" asp-validation-for="NewsModel.Body"></span>
+                                <label class="form-label" asp-for="Slider.Description">Description</label>
+                                <textarea class="form-control" asp-for="Slider.Description" rows="5" cols="5"></textarea>
+                                <span class="text-danger" asp-validation-for="Slider.Description"></span>
                             </div>
                         </div>
                     </div>
@@ -44,19 +44,7 @@
                     <div class="card-header">Fixed Fields</div>
                     <div class="card-body">
                         <div class="form-group mb-3">
-                            <label class="form-label" asp-for="NewsModel.CategoryId">Category</label>
-                            <select class="form-select" asp-for="NewsModel.CategoryId">
-                                <option value="" selected>Select</option>
-                                @foreach (var item in Model.Categories)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                    
-                                }
-                            </select>
-                            <span class="text-danger" asp-validation-for="NewsModel.CategoryId"></span>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="file" class="form-label">News Image</label>
+                            <label for="file" class="form-label">Slider Image</label>
                             <input class="form-control" type="file" name="file" id="file">
                         </div>
                         <div class="bn">
