Page Crud Added

--- a/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
+++ b/News365.UI/Areas/Cms/Views/Shared/_Layout.cshtml
@@ -60,12 +60,12 @@
             <nav class="sidenav shadow-right sidenav-light">
                 <div class="sidenav-menu">
                     <div class="nav accordion" id="accordionSidenav">
-                        <div class="sidenav-menu-heading">Ana sayfa</div>
+                        <div class="sidenav-menu-heading">Home Page</div>
                         <a class="nav-link" asp-area="Cms" asp-controller="Home" asp-action="Index">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
-                            Ana Sayfa
+                            Home Page
                         </a>
-                        <div class="sidenav-menu-heading">Cms Sayfaları</div>
+                        <div class="sidenav-menu-heading">Cms Pages</div>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse"
                             data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
@@ -77,15 +77,15 @@
                                 @* <a class="nav-link" asp-area="Cms" asp-controller="Languages"
                                     asp-action="Index">Çeviri Dilleri</a> *@
                                 <a class="nav-link" asp-area="Cms" asp-controller="Categories"
-                                    asp-action="Index">Kategori</a>
+                                    asp-action="Index">Category</a>
                                 <a class="nav-link" asp-area="Cms" asp-controller="News"
-                                    asp-action="Index">Haberler</a>
+                                    asp-action="Index">News</a>
                                  <a class="nav-link" asp-area="Cms" asp-controller="Sliders"
                                     asp-action="Index">Slider</a>
-                                    @*<a class="nav-link" asp-area="Cms" asp-controller="Pages"
-                                    asp-action="Index">Sayfalar</a>
+                                    <a class="nav-link" asp-area="Cms" asp-controller="Pages"
+                                    asp-action="Index">Pages</a>
 
-                                    <a class="nav-link" asp-area="Cms" asp-controller="Receipts"
+                                    @*<a class="nav-link" asp-area="Cms" asp-controller="Receipts"
                                     asp-action="Index">İpuçları</a>
                                     <a class="nav-link" asp-area="Cms" asp-controller="Advertisings"
                                     asp-action="Index">Reklamlar</a> *@
