--- a/News365.UI/Views/Shared/_Layout.cshtml
+++ b/News365.UI/Views/Shared/_Layout.cshtml
@@ -1,49 +1,41 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@inject IConfiguration _configuration
+
+@{
+    var controller = ViewContext.RouteData.Values["Controller"].ToString().ToLower();
+    var action = ViewContext.RouteData.Values["Action"].ToString().ToLower();
+    string _lang = ViewBag.Lang ?? "tr";
+        
+}
+<!DOCTYPE html>
+<html lang="@_lang">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - News365.UI</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/News365.UI.styles.css" asp-append-version="true" />
+    @RenderSection("seo", required: false)
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    @RenderSection("Styles", required: false)
+    <link rel="preload" as="font" type="font/woff" crossorigin="anonymous" href="/assets/fonts/SofiaPro-SemiBold.woff">
+    <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/assets/fonts/SofiaPro-SemiBold.woff2">
+    <link rel="preload" as="font" type="font/woff" crossorigin="anonymous" href="/assets/fonts/SofiaPro-Medium.woff">
+    <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/assets/fonts/SofiaPro-Medium.woff2">
+    <link rel="preload" as="font" type="font/woff" crossorigin="anonymous" href="/assets/fonts/SofiaPro-regular.woff">
+    <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/assets/fonts/SofiaPro-regular.woff2">
+    <link rel="stylesheet" href="/assets/css/style.min.css" asp-append-version="true" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">News365.UI</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    @{await Html.RenderPartialAsync("_Header");}
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - News365.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @RenderBody()    
+
+    @{await Html.RenderPartialAsync("_Footer");}
+    <div class="overlay-body w-100 position-fixed top-0"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    @RenderSection("validation", required: false)
+    @RenderSection("Scripts", required: false)
+    @{ await Html.RenderPartialAsync("_MessagesModal"); }
+    <script src="~/assets/js/style.js" asp-append-version="true"></script>
 </body>
 </html>
