--- a/News365.UI/Views/_ViewImports.cshtml
+++ b/News365.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,13 @@
 ﻿@using News365.UI
 @using News365.UI.Models
+@using Microsoft.Extensions.Configuration
+@using News365.DataAccess.Concrete.Context
+@using News365.Entities.Concrete
+@using News365.Business.Abstract
+@using News365.UI.Areas.Cms.Models
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpAccessor
+@inject ICategoryService categories
+@inject IDocumentService documents
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DNTCaptcha.Core
